--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 @import url('./header.css');
 @import url('./form.css');
+@import url('./slider.css');
 
 * {
     padding: 0;
@@ -66,6 +68,58 @@
 .button:hover {
     background-color: #2bbbad;
     box-shadow: 0 6px 5px -5px rgba(0, 0, 0, 0.5);
+}
+
+/* ----------------------------- */
+
+
+
+
+/* Slider styles --------------- */
+
+.slider {
+    display: flex;
+}
+
+.slider-arrow-block {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.slider-arrow-left,
+.slider-arrow-right {
+    width: 80%;
+    height: 14%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.slider-arrow-left > i,
+.slider-arrow-right > i {
+    display: block;
+    width: 100%;
+    height: 36px;
+    text-align: center;
+}
+
+.slider-items {
+    flex: 8;
+    overflow: hidden;
+    position: relative;
+}
+
+.slider-item {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all .6s ease-in-out;
+    padding: 5px;
 }
 
 /* ----------------------------- */
