--- a/styles/slider.css
+++ b/styles/slider.css
@@ -9,3 +9,55 @@
     justify-content: center;
     align-items: center;
 }
+
+.Slider__block {
+    width: 60vw;
+    height: 54vh;
+}
+
+.slider-arrow-left > i,
+.slider-arrow-right > i {
+    font-size: 32px;
+}
+
+.Slider__item {
+    width: 100%;
+    height: 100%;
+    border-radius: 3px;
+    box-shadow: 0 0 5px #aaa;
+    background-color: white;
+}
+
+.Slider__item-img {
+    width: 100%;
+    height: 75%;
+    border-radius: 3px 3px 0 0;
+}
+
+.Slider__item-footer {
+    width: 100%;
+    height: 25%;
+    border-radius: 0 0 3px 3px;
+    background-color: #fafafa;
+    display: flex;
+    align-items: center;
+    padding-left: 40px;
+}
+
+.Slider__item-button {
+    height: 40px;
+    width: 140px;
+    border: none;
+    outline: none;
+    border-radius: 2px;
+    letter-spacing: .5px;
+    font-size: 16px;
+    color: white;
+    cursor: pointer;
+    transition: all .3s ease-out;
+    box-shadow: 0 5px 5px -5px rgba(0, 0, 0, 0.5);
+}
+
+.Slider__item-button:hover {
+    box-shadow: 0 6px 5px -5px rgba(0, 0, 0, 0.5);
+}
