--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+@import url('./colors.css');
 @import url('./header.css');
 @import url('./form.css');
 @import url('./slider.css');
+
+/* Main styles  ---------------- */
 
 * {
     padding: 0;
@@ -20,6 +23,11 @@
     display: flex;
     justify-content: center;
 }
+
+/* ----------------------------- */
+
+
+
 
 /* Form styles  ---------------- */
 
@@ -51,11 +59,11 @@
     margin-top: -52px;
 }
 
-.button {
+.submit-button {
+    width: 140px;
     height: 40px;
     border: none;
     outline: none;
-    background-color: #26a69a;
     border-radius: 2px;
     letter-spacing: .5px;
     font-size: 16px;
@@ -65,8 +73,7 @@
     box-shadow: 0 5px 5px -5px rgba(0, 0, 0, 0.5);
 }
 
-.button:hover {
-    background-color: #2bbbad;
+.submit-button:hover {
     box-shadow: 0 6px 5px -5px rgba(0, 0, 0, 0.5);
 }
 
@@ -120,6 +127,24 @@
     left: 0;
     transition: all .6s ease-in-out;
     padding: 5px;
+}
+
+.slider-arrow-disabled {
+    color: #aaa;
+}
+
+.slider-title {
+    padding: 40px;
+    color: white;
+    font-size: 32px;
+}
+
+.slider-text {
+    padding: 40px;
+    padding-top: 0px;
+    color: white;
+    font-size: 18px;
+    line-height: 26px;
 }
 
 /* ----------------------------- */
