--- a/styles/slider.css
+++ b/styles/slider.css
@@ -24,11 +24,11 @@
     width: 100%;
     height: 100%;
     border-radius: 3px;
-    box-shadow: 0 0 5px #aaa;
+    box-shadow: 0 0 4px #aaa;
     background-color: white;
 }
 
-.Slider__item-img {
+.Slider__item-header {
     width: 100%;
     height: 75%;
     border-radius: 3px 3px 0 0;
@@ -38,26 +38,7 @@
     width: 100%;
     height: 25%;
     border-radius: 0 0 3px 3px;
-    background-color: #fafafa;
     display: flex;
     align-items: center;
     padding-left: 40px;
-}
-
-.Slider__item-button {
-    height: 40px;
-    width: 140px;
-    border: none;
-    outline: none;
-    border-radius: 2px;
-    letter-spacing: .5px;
-    font-size: 16px;
-    color: white;
-    cursor: pointer;
-    transition: all .3s ease-out;
-    box-shadow: 0 5px 5px -5px rgba(0, 0, 0, 0.5);
-}
-
-.Slider__item-button:hover {
-    box-shadow: 0 6px 5px -5px rgba(0, 0, 0, 0.5);
 }
